Fix some errors.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a href="bookingRecordPage.html">查看所有訂房紀錄</a>
     </footer>
 
-    <script type="module" src="src/main.ts"></script>
+    <script type="module" src="dist/main.js"></script>
 </body>
 
 </html>
